--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ target/
 .idea/compiler.xml
 .idea/libraries/
 .idea/uiDesigner.xml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/vcs.xml
 *.iws
 *.iml
 *.ipr
